# llama_index_starter_pack

./: README.md
flask_react/: fastapi_demo.py  index_server.py  pyproject.toml
flask_react/react_frontend/src/: style.scss
flask_react/react_frontend/src/apis/: fetchDocuments.tsx  insertDocument.tsx  queryIndex.tsx
flask_react/react_frontend/src/components/: Header.tsx
flask_react/saved_index/: docstore.json  index_store.json  vector_store.json
