[tool.poetry]
name = "fastapi-react"
version = "0.1.0"
description = ""
authors = ["Daniel VALIDE <capitalhumain@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_react"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
langchain = "^0.0.193"
llama-index = "^0.6.21.post1"
pypdf = "^3.9.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
werkzeug = "^2.3.5"
python-multipart = "^0.0.6"

[tool.poetry.scripts]
startdev = "uvicorn main:app --host 0.0.0.0 --port 5601 --reload=True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
